--- a/Ecom/templates/Ecom/products.html
+++ b/Ecom/templates/Ecom/products.html
@@ -1,6 +1,7 @@
+
 {% for products_item in myproducts %}
 <a href="{%url 'productDetails' products_item.category.slug  products_item.slug %}">
-<img src="{{ products_item.product_image.url }}" alt="" height="400px" width="auto">
-<h1>{{ products_item.name }}</h1>
+<img src="{{ products_item.product_image.url }}" alt="" height="250px" width="250px">
+<h3>{{ products_item.name }}</h3>
 </a>
 {% endfor %}
