--- a/Ecom/templates/Ecom/layout/main.html
+++ b/Ecom/templates/Ecom/layout/main.html
@@ -24,6 +24,7 @@
   <link href="{% static 'assets/vendor/glightbox/css/glightbox.min.css' %}" rel="stylesheet">
   <link href="{% static 'assets/vendor/remixicon/remixicon.css' %}" rel="stylesheet">
   <link href="{% static 'assets/vendor/swiper/swiper-bundle.min.css' %}" rel="stylesheet">
+  
 
   <!-- Template Main CSS File -->
   <link href="{% static 'assets/css/style.css'%}" rel="stylesheet">
@@ -55,7 +56,7 @@
           <li><a class="nav-link   scrollto" href="#portfolio">Portfolio</a></li>
           <li><a class="nav-link scrollto" href="#team">Team</a></li>
           <li><a class="nav-link scrollto" href="#contact">Contact</a></li>
-          <li><a class="getstarted scrollto" href="{% url 'register' %}">Register Here</a></li>
+          <li><a class="nav-link scrollto" href="{% url 'register' %}">Register Here</a></li>
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
       </nav><!-- .navbar -->
@@ -196,22 +197,23 @@
   <script src="{% static 'assets/vendor/swiper/swiper-bundle.min.js' %}"></script>
   <script src="{% static 'assets/vendor/waypoints/noframework.waypoints.js' %}"></script>
   <script src="{% static 'assets/vendor/php-email-form/validate.js' %}"></script>
+  <script src="{% static 'js/jquery.js' %}"></script>
+  <script src="{% static 'js/custom.js' %}"></script>
 
   <!-- Template Main JS File -->
   <script src="{% static 'assets/js/main.js'%}"></script>
 
 
   {% comment "alertify js" %}{% endcomment %}
-
-  <script src="//cdn.jsdelivr.net/npm/alertifyjs@1.13.1/build/alertify.min.js"></script>
-  <script>
-    alertify.set('notifier','position','top-right');
-  </script> 
-  {% for msg in messages %}
+  {% comment %} <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script> {% endcomment %}
+    <script>
+      {% comment %} alertify.set('notifier','position','top-right'); {% endcomment %}
+    </script> 
+  {% comment %} {% for msg in messages %}
     <script>
       alertify.success('{{msg}}');
     </script>
-  {% endfor %}
+  {% endfor %} {% endcomment %}
 
 </body>
 
