--- a/Ecom/templates/Ecom/productdetail.html
+++ b/Ecom/templates/Ecom/productdetail.html
@@ -2,26 +2,10 @@
 
 {% block myblock %}
 
-{% comment %} <div class="card" style="width: 18rem;">
-    <img src="{{singleprod.product_image.url}}" class="card-img-top" alt="...">
-    <div class="card-body">
-      <h5 class="card-title">{{singleprod.name}}</h5>
-      <p class="card-text">
-        {{singleprod.description}}
-    </p>
-    </div>
-    <div class="card-body">
-      <a href="#" class="card-link">Card link</a>
-      <a href="#" class="card-link">Another link</a>
-    </div>
-  </div> {% endcomment %}
-
-
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
   <div class="container">
     <div class="row">
         <div class="col-md-12">
-            <h1>{{ products.name }}</h1>
+            <h1>{{ singleprod.name }}</h1>
             <hr>
             <div class="row">
                 
@@ -29,34 +13,43 @@
         </div>
     </div>
     <div class="card product_data" style="width: 18rem;">
-        {% if products.tag %}
-       <label class = "product-viewtag">{{products.tag}}</label>
+        {% if singleprod.tag %}
+       <label class = "product-viewtag">{{singleprod.tag}}</label>
         {% endif %}
-    <div class="col-md-2">
-        {% if products.quantity > 0 %}
-          <label class="badge bg-success">In Stock</label>
-        {% else %}
-            <label class="badge bg-danger">Out of Stock </label>
-        {% endif %}
-  
-    </div>
-    <img src="{{products.product_image.url}}" class="card-img-top" alt="...">
+      <div class="col-md-2">
+          {% if singleprod.quantity > 0 %}
+            <label class="badge bg-success">In Stock</label>
+          {% else %}
+              <label class="badge bg-danger">Out of Stock </label>
+          {% endif %}
+    
+      </div>
+    <img src="{{singleprod.product_image.url}}" class="card-img-top" alt="...">
     <div class="card-body">
       <h5 class="card-title">Card title</h5>
       <div class="col-md-4">
         {% csrf_token %}
-        <input type="text" class="prod_id" value="{{ products.id }}" name="">
+        <input type="text" class="prod_id" value="{{ singleprod.id }}" name="">
         <div>quantity</div>
-            <div class="input-group text-center mb-3" style="width: 130px;">
+            <div class="input-group text-center mb-3" style="width: 150px;">
                 <button class="input-group-text decrement-btn">-</button>
-                <input type="text" name="quantity" class="form-control text-center qty-input" value ="1" id="">
+                <input type="text" name="quantity" class="form-control text-center qty-input" value ="1" id="myinput">
                 <button class="input-group-text increment-btn">+</button>
                 
             </div>
       </div>
-      <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+      <p class="card-text">Ceramic Shield front
+        Textured matte glass back and
+        stainless steel design.
+      </p>
+      <p>
+        Capacity : 128GB
+                   256GB
+                   512GB
+                   1TB
+      </p>
       <div class="col md-4">
-        {% if products.quantity > 0 %}
+        {% if singleprod.quantity > 0 %}
             <button type="button" class="btn btn-primary addToCartBtn">add to cart</button>
         {% endif %}
         <button type="button" class="btn btn-primary addToWishlist">add to wishlist</button>
@@ -66,4 +59,5 @@
     </div>
   </div>
   </div>  
+  <br>
 {% endblock myblock %}
